feat: docker spring boot, java web, running Dockerfile

--- a/devjava/spring-boot/Dockerfile
+++ b/devjava/spring-boot/Dockerfile
@@ -1,10 +1,23 @@
+FROM eclipse-temurin:17-jdk-alpine as build
+WORKDIR .
+
+COPY mvnw .
+COPY .mvn .mvn
+COPY pom.xml .
+COPY src src
+
+RUN ./mvnw install -DskipTests
+RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
+
 FROM eclipse-temurin:17-jdk-alpine
 VOLUME /tmp
-ARG EXTRACTED=/workspace/app/target/extracted
-RUN groupadd -r user && useradd -r -g user user
-USER user
-COPY ${EXTRACTED}/dependencies/ ./
-COPY ${EXTRACTED}/spring-boot-loader/ ./
-COPY ${EXTRACTED}/snapshot-dependencies/ ./
-COPY ${EXTRACTED}/application/ ./
+ARG DEPENDENCY=./target/dependency
+#COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
+#COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
+#COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
+COPY ${DEPENDENCY}/dependencies/ ./
+COPY ${DEPENDENCY}/spring-boot-loader/ ./
+COPY ${DEPENDENCY}/snapshot-dependencies/ ./
+COPY ${DEPENDENCY}/application/ ./
+#ENTRYPOINT ["java","-cp","app:app/lib/*","hello.Application"]
 ENTRYPOINT ["java","org.springframework.boot.loader.JarLauncher"]
