--- a/devjava/spring-boot/pom.xml
+++ b/devjava/spring-boot/pom.xml
@@ -33,6 +33,13 @@
 	      <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context-indexer</artifactId>
+          <version>6.0.13</version>
+          <optional>true</optional>
+        </dependency>
+
 	</dependencies>
 
 	<build>
