--- a/devjava/upload/pom.xml
+++ b/devjava/upload/pom.xml
@@ -27,7 +27,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot</artifactId>
+     <version>2.1.7.RELEASE</version>
+   </dependency>
+
+
+ </dependencies>
 
 	<build>
 		<plugins>
