--- a/devrust/simple06/cli/Cargo.toml
+++ b/devrust/simple06/cli/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.20"
+serde = { version = "1.0.192", features = ["derive"]  }
+serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
