--- a/devrust/simple06/cli/Cargo.toml
+++ b/devrust/simple06/cli/Cargo.toml
@@ -10,4 +10,5 @@ axum = "0.6.20"
 serde = { version = "1.0.192", features = ["derive"]  }
 serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
+tower-cookies = "0.9.0"
 tower-http = { version = "0.4.4", features = ["fs"] }
