wip: load balancer nginx first round, out

--- a/nginx/nginx/nginx.conf
+++ b/nginx/nginx/nginx.conf
@@ -1,11 +1,17 @@
 events { 
 }
+
 http {
+  upstream myproject {
+    server 192.168.106.134:8081;
+    server 192.168.106.134:8082;
+    server 192.168.106.134:8083;
+  }
+
   server {
     listen 80;
     location / {
-       proxy_pass http://127.0.0.1:3030;
+      proxy_pass http://myproject;
     }
   }
 }
-
