--- a/loadbalancer/docker-compose.yml
+++ b/loadbalancer/docker-compose.yml
@@ -2,9 +2,9 @@ version : “3”
 services :
   nginx:
     image: nginx:latest
-    container_name: nginx_container
+    container_name: nginx_container_loadbalancer
     ports:
       - 80:80
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf
     network_mode: host
